updated to latest version

--- a/package.json
+++ b/package.json
@@ -9,36 +9,36 @@
   "pre-commit": "lint",
   "license": "MIT",
   "dependencies": {
-    "classnames": "^2.2.6",
-    "intersection-observer": "^0.7.0",
-    "lodash.debounce": "^4.0.8",
-    "next": "^9.4.2",
-    "nprogress": "^0.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "swr": "^0.2.0",
     "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1"
+    "@material-ui/icons": "^4.9.1",
+    "classnames": "^2.2.6",
+    "intersection-observer": "^0.11.0",
+    "lodash.debounce": "^4.0.8",
+    "next": "^10.0.2",
+    "nprogress": "^0.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "swr": "^0.3.9"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.10",
-    "@types/node": "^14.0.22",
-    "@types/react": "^16.9.23",
-    "@typescript-eslint/eslint-plugin": "^2.22.0",
-    "@typescript-eslint/parser": "^2.22.0",
+    "@types/classnames": "^2.2.11",
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "babel-eslint": "^10.0.2",
     "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^6.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint": "^7.14.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gray-matter": "^4.0.2",
-    "marked": "^1.1.0",
-    "next-remote-watch": "^0.1.1",
-    "prettier": "^1.18.2",
+    "marked": "^1.2.5",
+    "next-remote-watch": "^0.2.0",
+    "prettier": "^2.2.0",
     "prism-react-renderer": "^1.1.1",
     "rss": "^1.2.2",
-    "typescript": "^3.8.3"
+    "typescript": "^4.1.2"
   },
   "prettier": {
     "semi": false,
