--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "lint": "prettier --write '**/*.js'",
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build",
+    "export": "next export"
   },
   "pre-commit": "lint",
   "license": "MIT",
